# lantern-os

./: .clauderules  .cloudflared.err  .dockerignore  .env.example  .gitattributes  .gitignore  .mcp-oauth.err  .ngrok.yml  .pre-commit-config.yaml  ACCESSIBILITY.md  AGENT-HANDOFF-2026-05-28.md  AGENT.md  AGENTS.md  AGENT_ORCHESTRATION_DESIGN.md  AI-TRADER-INTEGRATION-STATUS.md  AI_TRADER_INTEGRATION_GUIDE.md  ANALYSIS_PIPELINE_AUDIT.md  ARCHITECTURE_PIVOT_2026-06-11.md  AUDIT-CHAIN-DEPLOYMENT.md  AUTO_RESOLVE_PROVIDER_AUDIT.md  BACKLOG-2026-06-10.md  BACKLOG.md  BLOAT_CLEANUP_ISSUE.md  BOT-SETUP-GUIDE.md  BUG_FIX_REPORT.md  CHANGELOG.MD  CLAUDE.md  CLEANUP-PLAN.md  CLEANUP.md  CODEX-HANDOFF.md  CODE_OF_CONDUCT.md  CONSOLIDATION-ACTION-PLAN.md  CONTRIBUTING.md  CONVERGENCE-TASK-FLEET-OPTIMIZATION-2026-05-31.md  CONVERGENCE_COMPLETE.md  CONVERGENCE_CONTRACT_PHASE1_2026-06-11.md  CONVERGENCE_IO_ENGINE.md  CREATOR_AUDIT.md  CSF-IMAGE-TRAINING.md  Caddyfile  (+130 more)
.claude/: CONFIG-UPDATE-SUMMARY.md  GPT-OAUTH-SETUP.md  agent-slots.json  gpt-oauth-mcp-schema.yaml  launch.json  mcp-servers.json  validate-config.ps1
.github/: FUNDING.yml  dependabot.yml
.github-cache/: issues.json
.mcp/: settings.json
.netlify/: netlify.toml  state.json
.windsurf/: hooks.json  mcp.json
adr/: 0001-subsystem-one-loop-audit.md
agent-fleet/: index.html
applications/: SFF-HSEE-2026-DRAFT.md
apps/: __init__.py
apps/lantern-trade-chat/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/lantern-trade-chat/app/: __init__.py  auth.py  chat.py  config.py  kalshi.py  main.py  safety.py
apps/lantern-trade-chat/k8s/: deployment.yaml  ingress.yaml  secret.example.yaml  service.yaml
apps/lantern-trade-chat/static/: app.js  index.html  styles.css
apps/lantern-trade-chat/tests/: test_app.py
arc-bounty-workbench/: README.md  agent_stack.py  hypothesis_search.py  no_internet_test.py  paper_template.md  receipt_format.py  run_evaluation.py  task_loader.py  visual_transform.py
aws-deployment/: AWS-DEPLOYMENT-GUIDE.md  Deploy-Auto.ps1  Deploy-ToAWS.ps1  Quick-Deploy.ps1  README.md  Setup-DNS.ps1  cloudformation-template.yaml
bayesian-dashboard/: index.html
benchmarks/: csf_benchmark.py  csf_cadd_rust_vs_alternatives.py  csf_competitor_benchmark.py  csf_media_benchmark.py  csf_realworld_benchmark.py  csf_v07_benchmark.py
changelog.d/: 1127-model-dropdown.md  1558-registry-aware-orphan-audit.md  1609-loop-reasoner-anti-repetition.md  1740-hff-private-key-encryption.md  README.md  absorb-grok-claude-into-sigma0-council.md  active-truth-gate-1731-1733.md  adr-backfill-link-paths.md  adr-number-collision-cleanup.md  agents-porting-license-note.md  ai-trader-onoff-button.md  auto-pull-fleet.md  (+241 more)
src/cadd_rust/: Cargo.toml  Dockerfile
src/cadd_rust/src/: assess.rs  capture.rs  cli.rs  distill.rs  dock.rs  lib.rs
src/cio/: Cargo.toml
src/cio/src/: csf.rs  dilation.rs  executor.rs  graph.rs  hot_swap.rs  lib.rs  main.rs  pcsf.rs
src/csf_rust/: Cargo.toml  Dockerfile  README.md
src/csf_rust/benches/: benchmark.rs
src/csf_rust/src/: claims_packet.rs  cli.rs  compress.rs  convergence.rs  dictionary.rs  header.rs  lib.rs  search.rs  security.rs  sparse.rs  streaming.rs  wavefront.rs
src/csf_rust/tests/: cli_roundtrip.rs
(+3388 files in other folders)
