[project]
name = "lantern-trade-chat"
version = "0.1.0"
description = "Lantern OS first-class trading chat app: OAuth-gated Kalshi order desk (founder + Courtney only)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "cryptography>=42.0",
    "authlib>=1.3",
    "itsdangerous>=2.1",
    "starlette>=0.37",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
