[package]
name = "cadd"
version = "0.2.1"
edition = "2021"
authors = ["Lantern OS Project"]
description = "Capture, Assess, Distill, Dock — brand asset validation pipeline"
license = "MIT"
repository = "https://github.com/alex-place/lantern-os"
rust-version = "1.70"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
regex = "1.10"
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "cadd"
path = "src/cli.rs"
