[package]
name = "csf"
version = "1.0.0"
edition = "2021"
authors = ["Lantern OS Project"]
description = "Convergence-Fitted Searchable Binary Archive — native Rust implementation"
license = "MIT"
repository = "https://github.com/alex-place/lantern-os"
rust-version = "1.70"

[dependencies]
# Core dependencies aligned with spec §7
zstd = { version = "0.13", features = ["zstdmt"] }
bitvec = "1.0"
byteorder = "1.5"
thiserror = "1.0"
memmap2 = "0.9"          # For zero-copy streaming on files > RAM
rayon = "1.8"            # Parallel compression segments
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xxhash-rust = { version = "0.8", features = ["xxh64", "xxh3"] }
# Optional: AES-256-GCM encryption (spec §9)
aes-gcm = { version = "0.10", optional = true }
rand = { version = "0.8", optional = true }
clap = { version = "4.4", features = ["derive"] }

[features]
default = []
encrypt = ["aes-gcm", "rand"]

[[bin]]
name = "csf"
path = "src/cli.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"
flate2 = "1.0"

[[bench]]
name = "csf_benchmark"
path = "benches/benchmark.rs"
harness = false
